display current sorting mode in debug info